<resources>
    <string name="app_name">AppVendas</string>
    <string name="valor">Total da compra R$ %1$s</string>

    <string name="valor_pago_menor">Valor pago menor que o total R$ %1$s</string>
    <string name="valor_pago_maior">Valor pago maior que o total R$ %1$s</string>
    <string name="venda_sucesso">Venda finaliza com sucesso!</string>

    <string name="total_compra_text_view">Total da compra R$ 0,00</string>

    <string name="desconto_text_view">Desconto</string>
    <string name="desconto_text_view_hint">R$ 0,00</string>

    <string name="dinheiro_text_view">Dinheiro</string>
    <string name="dinheiro_text_view_hint">R$ 0,00</string>

    <string name="debito_text_view">Débito</string>
    <string name="debito_text_view_hint">R$ 0,00</string>

    <string name="credito_text_view">Crédito</string>
    <string name="credito_text_view_hint">R$ 0,00</string>

    <string name="edt_hint_quantidade">Quantidade</string>
    <string name="edt_hint_observacao">Observação</string>

    <string name="text_button_finalizar">Finalizar</string>
    <string name="text_button_continuar">Continuar</string>
    <string name="text_button_adicionar">Adicionar</string>

    <string name="list_vazia">"Adicione pelo menos 1 produto na lista"</string>
</resources>